--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "handlebars-delimiters",
+  "name": "@steeringwaves/handlebars-delimiters",
   "description": "Custom delimiters, for Handlebars templates. Includes greedy patch.",
   "version": "1.0.1",
   "homepage": "https://github.com/steeringwaves/handlebars-delimiters",
